plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id "com.diffplug.spotless" version "6.17.0"
}

group = 'com.jar'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

//	db
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	runtimeOnly 'org.postgresql:postgresql'

//cahing
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

//	ratelimiting
	implementation 'com.github.vladimir-bukhtoyarov:bucket4j-core:6.2.0'


//	security
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// kafka
	implementation 'org.springframework.kafka:spring-kafka'

	// implementation 'org.apache.kafka:kafka-clients:3.9.0'


//	dev
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'io.micrometer:micrometer-tracing:1.3.0'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	implementation 'org.springframework.boot:spring-boot-starter-web'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'



}

spotless {
	java {
//        googleJavaFormat()
		// optional: you can specify a specific version (>= 1.8) and/or switch to AOSP style
		//   and/or reflow long strings
		//   and/or use custom group artifact (you probably don't need this)
		googleJavaFormat('1.23.0').aosp().reflowLongStrings().groupArtifact('com.google.googlejavaformat:google-java-format')
	}
}


tasks.named('test') {
	useJUnitPlatform()
}
